update index.html, organized functions

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="css/styles.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+    <script src="scripts/add-aplphabet-buttons.js" defer="defer"></script>
+    <script src="scripts/guesses-color-change.js" defer="defer"></script>
     <script src="scripts/main.js" defer="defer"></script>
 </head>
 <body>
@@ -27,7 +29,7 @@
                     <p id="hint"></p>
                </div>
                <p id="incorrect-guesses">
-                   Incorrect Guesses: <span id="wrong-guesses">5</span>/6
+                   Incorrect Guesses: <span id="wrong-guesses">0</span>/6
                </p>
                <div id="letters-container">
 
