update index.html, function organization

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     <p id="hint"></p>
                </div>
                <p id="incorrect-guesses">
-                   Incorrect Guesses: <span id="wrong-guesses">0</span>/6
+                   Incorrect Guesses: <span id="wrong-guesses"></span>/6
                </p>
                <div id="letters-container">
 
