updated index.html, update main.js

--- a/index.html
+++ b/index.html
@@ -41,6 +41,23 @@
                 Guess a letter from the hidden word! Beware you have limited number of chances to guess the word and save the stick man from meeting his doom!
             </p>
         </footer>
+        <div id="you-won">
+            <picture>
+                <img src="" alt="">
+            </picture>
+            <h2>Congratulations You Win!</h2>
+            <button id="play-again">
+                Play Again
+            </button>
+        </div>
+        <div id="try-again">
+            <picture>
+                <img src="" alt="">
+            </picture>
+            <button id="try-again">
+                Try Again
+            </button>
+        </div>
     </div>
 </body>
 </html>
