updated images and styles

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             </p>
             <div class="hangman-image-container">
                 <picture>
-                    <img src="images/img-0.png" alt="" id="hangman-image">
+                    <img src="" alt="" id="hangman-image">
                 </picture>
             </div>
             <div class="game-container">
