updates styles.scss, main.js, and index.html. Changed words.json

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         </div>
         <div id="you-lose">
             <p>
-                You let the our friend perish, and now Sauron has taken over the lands of Middle Earth! 
+                You let Frodo perish, and now Sauron has taken over the lands of Middle Earth! 
             </p>
             <picture>
                 <img id="losing-image" src="" alt="">
