added jquery, and updated main.js

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=MedievalSharp&display=swap" rel="stylesheet">
+    <script src="scripts/jquery-3.4.1.min.js" defer="defer"></script>
     <script src="scripts/add-aplphabet-buttons.js" defer="defer"></script>
     <script src="scripts/guesses-color-change.js" defer="defer"></script>
     <script src="scripts/main.js" defer="defer"></script>
