updated multiple files

--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
     <link rel="stylesheet" href="css/styles.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=MedievalSharp&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Yatra+One&display=swap" rel="stylesheet">
     <script src="scripts/jquery-3.4.1.min.js" defer="defer"></script>
     <script src="scripts/add-aplphabet-buttons.js" defer="defer"></script>
     <script src="scripts/guesses-color-change.js" defer="defer"></script>
